# rust-ledger

./: .gitignore  Cargo.toml  README.md  architecture.json
.github/workflows/: rust.yaml
data/: account-definition.yaml  ledger.yaml
src/: lib.rs  main.rs  model.rs
src/model/: control.rs  core.rs  definition.rs  definition_control.rs  entity.rs  error.rs  ledger.rs  mock.rs  transaction_control.rs
src/model/core/: account.rs  transaction.rs
src/model/entity/: amount_entity.rs  ledger_entity.rs  transaction_entity.rs
src/model/ledger/: amount.rs  definition.rs  transaction.rs
