[package]
name = "accounting-ledger"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0.144", features = ["derive"]}
serde_yaml = "0.9.13"
chrono = {version="0.4", features= ["serde"]}

[dev-dependencies]
mockall = "0.11"
arch_test_core = "0.1"
